tests/ui/trait-bounds/more_maybe_bounds.stderr
error: this relaxed bound is not permitted here
  --> $DIR/more_maybe_bounds.rs:23:37
   |
LL | fn baz<T>() where T: Iterator<Item: ?Trait1> {}
   |                                     ^^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error: this relaxed bound is not permitted here
  --> $DIR/more_maybe_bounds.rs:29:21
   |
LL |     fn f() where T: ?Trait1 {}
   |                     ^^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error: this relaxed bound is not permitted here
  --> $DIR/more_maybe_bounds.rs:35:34
   |
LL | struct S2<T>(T) where for<'a> T: ?Trait5<'a>;
   |                                  ^^^^^^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error: bound modifier `?` can only be applied to default traits like `Sized`
  --> $DIR/more_maybe_bounds.rs:17:20
   |
LL | fn bar<T: ?Sized + ?Trait2 + ?Trait1 + ?Trait4>(_: &T) {}
   |                    ^^^^^^^

error: bound modifier `?` can only be applied to default traits like `Sized`
  --> $DIR/more_maybe_bounds.rs:17:30
   |
LL | fn bar<T: ?Sized + ?Trait2 + ?Trait1 + ?Trait4>(_: &T) {}
   |                              ^^^^^^^

error: bound modifier `?` can only be applied to default traits like `Sized`
  --> $DIR/more_maybe_bounds.rs:17:40
   |
LL | fn bar<T: ?Sized + ?Trait2 + ?Trait1 + ?Trait4>(_: &T) {}
   |                                        ^^^^^^^

error: bound modifier `?` can only be applied to default traits like `Sized`
  --> $DIR/more_maybe_bounds.rs:35:34
   |
LL | struct S2<T>(T) where for<'a> T: ?Trait5<'a>;
   |                                  ^^^^^^^^^^^

error: aborting due to 7 previous errors

